# wwebjs-wa

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  server.js
docs/: API.md  MEDIA-PROCESSING.md  POLLING.md  SQLITE.md
wa-cli/: Cargo.toml
wa-cli/config/: wa-schema.sql
wa-cli/src/: main.rs
