[package]
name = "wa"
version = "1.0.0"
edition = "2021"
description = "CLI client for wwebjs-wa WhatsApp bridge server"
license = "MIT"
repository = "https://github.com/rodrigobroilo/wwebjs-wa"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
